Changes to work with Java 10