@@ -451,6 +451,16 @@
 			<artifactId>jasperreports-fonts</artifactId>
 			<version>6.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.xmlgraphics</groupId>
+			<artifactId>batik-gvt</artifactId>
+			<version>1.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.xmlgraphics</groupId>
+			<artifactId>batik-bridge</artifactId>
+			<version>1.9</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/net.sourceforge.barbecue/barbecue -->
 		<dependency>
 			<groupId>net.sourceforge.barbecue</groupId>
@@ -479,7 +489,7 @@
 		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
 			<artifactId>batik-dom</artifactId>
-			<version>1.7</version>
+			<version>1.9</version>
 		</dependency>
 		<!-- apache commons codec -->
 		<dependency>
@@ -1169,12 +1179,6 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>2.9.5</version>
 		</dependency>
-		<dependency>
-			<!-- json support for java 8 localDate -->
-			<groupId>com.fasterxml.jackson.datatype</groupId>
-			<artifactId>jackson-datatype-jsr310</artifactId>
-			<version>2.9.5</version>
-		</dependency>
         <dependency>
             <groupId>io.prometheus</groupId>
             <artifactId>simpleclient</artifactId>
@@ -1200,6 +1204,37 @@
 			<artifactId>swagger-jaxrs2</artifactId>
 			<version>2.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.ws</groupId>
+			<artifactId>jaxws-ri</artifactId>
+			<version>2.3.0</version>
+			<type>pom</type>
+		</dependency>
+<!--		<dependency>
+			<groupId>javax.transaction</groupId>
+			<artifactId>javax.transaction-api</artifactId>
+			<version>1.2</version>
+		</dependency>-->
+<!--		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.2.8</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-core</artifactId>
+			<version>2.2.8</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.2.8</version>
+		</dependency>-->
+<!--		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.1</version>
+		</dependency>-->
 	</dependencies>
 	<build>
 		<resources>
@@ -1466,6 +1501,18 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+					<compilerArgs>
+						<arg>--add-modules</arg>
+						<arg>java.se.ee</arg>
+						<arg>--add-modules</arg>
+						<arg>jdk.xml.ws</arg>
+						<arg>--add-modules</arg>
+						<arg>jdk.xml.bind</arg>
+					</compilerArgs>
+<!--					<compilerArguments>
+						<compilerArgument>&#45;&#45;add-modules</compilerArgument>
+						<compilerArgument>java.se.ee</compilerArgument>
+					</compilerArguments>-->
 				</configuration>
 			</plugin>
 			<plugin>
@@ -1948,6 +1995,52 @@
 			<activation>
 				<activeByDefault>false</activeByDefault>
 				<jdk>1.8</jdk>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.oscarehr</groupId>
+					<artifactId>datasource-jdk7</artifactId>
+					<version>1.0</version>
+				</dependency>
+			</dependencies>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>2.9</version>
+						<configuration>
+							<minmemory>128m</minmemory>
+							<maxmemory>1g</maxmemory>
+							<tags>
+								<tag>
+									<name>todo</name>
+									<placement>a</placement>
+									<head>To Do:</head>
+								</tag>
+							</tags>
+							<quiet>true</quiet>
+						</configuration>
+						<executions>
+							<execution>
+								<phase>verify</phase>
+								<goals>
+									<goal>javadoc</goal>
+								</goals>
+								<configuration>
+									<additionalparam>-Xdoclint:none</additionalparam>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>jdk10</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+				<jdk>10</jdk>
 			</activation>
 			<dependencies>
 				<dependency>
